--- a/MakeDatedFolders_WebUI_A_v1_fix6/ui/index.html
+++ b/MakeDatedFolders_WebUI_A_v1_fix6/ui/index.html
@@ -41,7 +41,7 @@
         </div>
         <div class="header-actions">
           <button class="btn ghost" id="btnReload" type="button">再読込</button>
-          <button class="btn danger" id="btnShutdown" type="button">サーバー終了</button>
+          <button class="btn danger" id="btnShutdown" type="button">終了</button>
         </div>
       </header>
 
